--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.12.0",
     "react-donut-chart": "^1.1.8",
+    "react-gauge-chart": "^0.2.5",
     "react-scripts": "3.4.0"
   },
   "scripts": {
